# MQ-Prime-Artifact

./: README.md
Optimized_Implementation_C/: CMakeLists.txt  README.md
Optimized_Implementation_C/bench/: bench_sign.c
Optimized_Implementation_C/include/: MQ-Prime.h  MQ-Prime_arith.h  aes_core.h  aes_hash.h  aes_prg.h  config.h  ggm.h  ntt.h
Optimized_Implementation_C/src/: MQ-Prime.c  MQ-Prime_arith.c  aes_core.c  aes_hash.c  aes_prg.c  ggm.c  ntt.c
Optimized_Implementation_C/tests/: test_dudect.c  test_functional.c
Reference_Implementation_Python/: README.md  benchmark.py  build_c_ext.py  main.py  requirements.txt
Reference_Implementation_Python/c_extension/: bench_critical.c  ntt.c  ntt.h
Reference_Implementation_Python/experiments/: plot_breakdown.py  plot_dreg.py
Reference_Implementation_Python/mq_prime/: aes_prg.py  data_structures.py  faest_framework.py  ggm_tree.py  hash_utils.py  merkle_tree.py  merkle_tree_quad.py  mq_prime_cvp_system.py  ntt_wrapper.py  parameters.py  serialization.py  timer.py  vole_engine.py
Reference_Implementation_Python/security_analysis/: dreg_vs_random.sage  minrank_check.sage  security_test.sage
